Updated color variables and fixed some colors with low contrast

--- a/src/components/App/App.styl
+++ b/src/components/App/App.styl
@@ -5,8 +5,8 @@
 .container
 	overflow hidden
 	background-color var(--background_color)
-	color var(--color_09)
-	fill var(--color_08)
+	color var(--color)
+	fill var(--svg_color)
 
 	*
 		user-select none
