--- a/src/components/Tabs/Tab/Tab.styl
+++ b/src/components/Tabs/Tab/Tab.styl
@@ -13,10 +13,10 @@
 	transition background-color .05s $e_deceleration
 
 	button&
-		border-bottom 1px solid var(--color_01)
+		border-bottom 1px solid var(--tab_bordercolor)
 
 	button&:hover
-		background-color var(--color_005)
+		background-color var(--tab_bgcolor)
 		margin-bottom 1px
 		transition background-color .1s $e_deceleration
 
