--- a/src/components/ViewNavigation/Toolbar/Toolbar.styl
+++ b/src/components/ViewNavigation/Toolbar/Toolbar.styl
@@ -13,9 +13,10 @@
 	background var(--primary_color)
 	border-top 1px solid var(--background_color)
 	line-height 4em
-	color var(--color_1)
 	overflow hidden
 	border-bottom 2px solid var(--background_color)
+	color var(--color_over_bgcolor)
+	fill currentColor
 
 .button
 	white-space nowrap
