--- a/src/components/ViewSettings/ColorScheme/ColorScheme.styl
+++ b/src/components/ViewSettings/ColorScheme/ColorScheme.styl
@@ -5,14 +5,15 @@
 .container
 	background-color var(--primary_color)
 	padding 2em 1.2em
+	&&& label
+		color var(--color_over_primary_color)
 
 	select
 
 		&
 		&:hover
 		&:focus
-			color var(--color_1)
-			border-color var(--color_1)
+			border-color var(--color)
 			background-color var(--primary_color)
 			outline-color transparent
 			box-shadow none
